src/mongo/db/storage/write_unit_of_work.cpp
@@ -28,10 +28,18 @@
  *    it in the license file.
  */
 
+#include "mongo/platform/basic.h"
+
 #include "mongo/db/storage/write_unit_of_work.h"
+
 #include "mongo/db/operation_context.h"
+#include "mongo/util/fail_point.h"
+#include "mongo/util/fail_point_service.h"
+#include "mongo/util/time_support.h"
 
 namespace mongo {
+
+MONGO_FAIL_POINT_DEFINE(sleepBeforeCommit);
 
 WriteUnitOfWork::WriteUnitOfWork(OperationContext* opCtx)
     : _opCtx(opCtx), _toplevel(opCtx->_ruState == RecoveryUnitState::kNotInUnitOfWork) {
@@ -95,6 +103,10 @@ void WriteUnitOfWork::commit() {
     invariant(!_released);
     invariant(_opCtx->_ruState == RecoveryUnitState::kActiveUnitOfWork);
     if (_toplevel) {
+        if (MONGO_FAIL_POINT(sleepBeforeCommit)) {
+            sleepFor(Milliseconds(100));
+        }
+
         _opCtx->recoveryUnit()->commitUnitOfWork();
         _opCtx->_ruState = RecoveryUnitState::kNotInUnitOfWork;
     }
